# OnlineShop_PetProject-2

./: .gitignore  README.md
Backend/: .dockerignore  Dockerfile  pyproject.toml
Backend/app/: app.py
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: 155aef99eaf1_added_cascade_delete.py  232355ed158e_initial_tables.py  369736478219_added_role.py  a46157f3e604_added_image_url.py  d8cba9826da7_make_product_id_in_orderitem_nullable_.py
Backend/app/api_v1/: __init__.py  mail_config.py  mail_send.py
Backend/app/api_v1/admin/: crud.py  views.py
Backend/app/api_v1/cart/: crud.py  dependecies.py  schemas.py  views.py
Backend/app/api_v1/orders/: crud.py  schemas.py  views.py
Backend/app/api_v1/products/: crud.py  dependecies.py  schemas.py  views.py
Backend/app/api_v1/users/: auth.py  crud.py  dependecies.py  schemas.py  views.py
Backend/app/core/: config.py
Backend/app/core/models/: __init__.py  _db_helper.py  cart.py  category.py  order.py  orderitem.py  product.py  user.py
Backend/app/tests/: conftest.py  test_cart.py  test_product.py  test_users.py
Frontend/vite-project/: package-lock.json  package.json
Frontend/vite-project/src/: App.css  App.jsx  data.js
Frontend/vite-project/src/components/AddProductForm/: AddProductForm.css  AddProductForm.jsx
Frontend/vite-project/src/components/Header/: Header.css  Header.jsx
Frontend/vite-project/src/components/OrderHistory/: OrderHistory.css  OrderHistory.jsx
Frontend/vite-project/src/pages/: AdminPage.css  AdminPage.jsx  Cart.css  Cart.jsx  ForgotPassword.jsx  Home.css  Home.jsx  Login.css  Login.jsx  Products.css  Products.jsx  Register.jsx
